update search query while typing, implement search in SuperCRM

--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -50,7 +50,7 @@
         <a href="/"><polymer-ui-icon-button icon="menu" href="/"></polymer-ui-icon-button></a>
         <polymer-ui-field>
             <polymer-ui-icon icon="search"></polymer-ui-icon>
-            <input placeholder="Search" value="{{search}}"/>
+            <input placeholder="Search" value="{{search}}" update-on="input"/>
         </polymer-ui-field>
         <polymer-ui-icon-button id="account" icon="account"></polymer-ui-icon-button>
     </polymer-ui-toolbar>
