--- a/Apps/SuperCRM/Client/search.html
+++ b/Apps/SuperCRM/Client/search.html
@@ -15,4 +15,16 @@
             </template>
         </ul>
     </div>
+    <div class="SuperCRM">
+        <h1>Companies</h1>
+        <ul>
+            <template repeat="{{Companies}}">
+                    <li><a href="{{Uri}}">{{Name}} | {{Contacts.length}} contacts
+                        <!-- TODO fix PuppetJS span in a
+                            <span>{{Name$}}</span>
+                        <span>{{Contacts.length}} contacts</span>-->
+                        </a></li>
+            </template>
+        </ul>
+    </div>
 </template>
