commit Skype libraries to version control to load them locally (otherwise sometimes we get errors from CDN about Access-Control-Allow-Origin)

--- a/Apps/Skyper/Client/skyper-user.html
+++ b/Apps/Skyper/Client/skyper-user.html
@@ -4,7 +4,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/polymer.js"></script>
 -->
 <!-- Importing Skype Library -->
-<script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
+<script type="text/javascript" src="/vendor/skype-uri/skype-uri.js"></script>
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/skype-button/src/skype-button.html">
 <template bind="{{Skyper}}">
