--- a/Apps/Skyper/Client/skyper.html
+++ b/Apps/Skyper/Client/skyper.html
@@ -10,7 +10,7 @@
     <link rel="import" href="/vendor/x-html/x-html.html">
 
     <!-- FIXME: `<script>` tag in included in partial used by `<x-html>` does not load --> 
-    <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
+    <script type="text/javascript" src="/vendor/skype-uri/skype-uri.js"></script>
 </head>
 <body>
     <template bind id="root">
