use Person class in SuperCRM

--- a/Apps/SuperCRM/Client/contact.html
+++ b/Apps/SuperCRM/Client/contact.html
@@ -4,10 +4,10 @@
 <template bind="{{SuperCRM}}">
         <gravatar-image username="{{ Email$ }}"></gravatar-image>
         <div class="SuperCRM">
-            <label>First Name<input value="{{ FirstName$ }}"></label>
+            <label>First Name<input value="{{ Person.FirstName$ }}"></label>
         </div>
         <div class="SuperCRM">
-            <label>Last Name<input value="{{ LastName$ }}"></label>
+            <label>Last Name<input value="{{ Person.LastName$ }}"></label>
         </div>
 	    <div class="SuperCRM">
             <label>Title <input value="{{ Title$ }}"></label>
