--- a/Apps/SuperCRM/Client/search.html
+++ b/Apps/SuperCRM/Client/search.html
@@ -5,7 +5,7 @@
         <h1>Contacts</h1>
         <ul>
             <template repeat="{{Contacts}}">
-                    <li><a href="{{Uri}}">{{FirstName}}  {{LastName}} | {{Title}} | {{Company.Name}}
+                    <li><a href="{{Uri}}">{{Person.FirstName}}  {{Person.LastName}} | {{Title}} | {{Company.Name}}
                         <!-- TODO fix PuppetJS span in a
                         <span>{{Name$}}</span>
                         <span>{{Title$}}</span>
