--- a/Apps/SuperCRM/Client/contact.html
+++ b/Apps/SuperCRM/Client/contact.html
@@ -30,7 +30,7 @@
             </label>
         </div>
 	    <div class="SuperCRM">
-            <label><button bind="{{ Save$ }}" onclick="setModelValue(this, null)">Save</button></label>
+            <label><button onclick="getModel(this).Save$ = null">Save</button></label>
         </div>
         <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
 </template>
