--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -12,6 +12,7 @@
     <link rel="import" href="/vendor/polymer-ui-field/polymer-ui-field.html">
 
     <link rel="import" href="/vendor/imported-template/imported-template.html">
+    <link rel="import" href="/vendor/model-operations/model-operations.html">
     <link rel="import" href="/vendor/tomalec-sortable-list/src/tomalec-sortable-list.html">
     <link rel="import" href="/vendor/pj-sortable-tiles/src/pj-sortable-tiles.html">
     <link rel="import" href="/vendor/warpech-display-router/warpech-display-router.html">
