--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -1,4 +1,8 @@
-﻿<template bind="{{SuperCRM}}">
+﻿<link rel="stylesheet" href="/css/labeledInput.css">
+<link rel="stylesheet" href="/css/button.css">
+<link rel="stylesheet" href="/css/select.css">
+
+<template bind="{{SuperCRM}}">
     <style>
         h1 input {
             font-size: 0.9em;
@@ -13,18 +17,27 @@
         }
     </style>
 
-    
-        <h1><input value="{{ Name$ }}"></h1>
-        <label>Revenue
-          <input type="number" value="{{ Revenue$ }}">
-        </label>
+        <div>
+            <div class="labeled-input">
+                <input id="Name$" type='text' value='{{ Name$ }}' placeholder='<Name>'>
+                <label for="Name$">Name</label>
+            </div>
+        </div>
+
+        <div>
+            <div class="labeled-input">
+                <input id="Revenue$" type='text' value='{{ Revenue$ }}' placeholder='<Revenue>'>
+                <label for="Revenue$">Revenue</label>
+            </div>
+        </div>
+
         <div class="contacts">
             <h2>Contacts</h2>
            <template repeat="{{ Contacts }}">
               <template is="imported-template" content="{{ Html }}"></template>
            </template>
-           <label><button onclick="getModel(this).AddContact$ = null">Add a contact in {{Name$}}</button></label>
+           <button class="button" style="background-color:#184259" onclick="getModel(this).AddContact$ = null">Add a contact in {{Name$}}</button>
         </div>
-        <label><button onclick="getModel(this).Save$ = null">Save</button></label>
+        <button class="button" style="background-color:#11653B" onclick="getModel(this).Save$ = null">Save</button>
         <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
 </template>
