--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -16,12 +16,44 @@
 <template>
   <!-- <link rel="stylesheet" href="pj-dashboard.css"> -->
   <style>
-      #main {
-          display: flex;
-      }
+
+    #container {
+        display: flex;
+        display: -webkit-flex;
+
+       	-webkit-flex-direction: column; 
+	    flex-direction: column;
+
+	    -webkit-flex: 0 1 auto;
+    	flex: 0 1 auto;
+
+        width:100%;
+        height:100%;
+
+    }
+
+    polymer-ui-toolbar {
+        -webkit-flex: none;
+        flex: none;
+    }
+
+    #main {
+        display: flex;
+        display: -webkit-flex;
+
+        -webkit-flex: 1 0 auto;
+        flex: 1 0 auto;
+
+       	-webkit-flex-direction: row; 
+	    flex-direction: row;
+
+    }
+
+
     polymer-ui-toolbar polymer-ui-field{
         width:  100%;
     }
+
     polymer-ui-toolbar polymer-ui-field:active{
         border-color:  rgb(0, 136, 204);
     }
@@ -31,49 +63,71 @@
         background-color:  #fff;
     }
 
+
     :host > polymer-ui-toolbar polymer-ui-icon-button:hover ^ polymer-ui-icon {
         transition: -webkit-transform 0.33s;
         transition: transform 0.33s;
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+
     polymer-ui-toggle-button{
-        margin: 8px;
+        margin-top: 5px;
+        margin-left: 10px;
+        margin-right: 5px;
     }
+
+    polymer-ui-field label {
+        margin-left: 5px;
+        margin-right: 10px;
+    }
+
+    polymer-ui-sidebar {
+        box-shadow:none;
+    }
+
     #filters{
-        box-shadow: inset 8px 0px 8px -4px rgba(0, 0, 0, 0.4),
-                    inset 0px 8px 8px -4px rgba(0, 0, 0, 0.4);
-        height: 100%;
-        float:right;
+        -webkit-flex: 0 1 auto;
+        flex: 0 1 auto;
+        border-left: 1px solid #ddd;
     }
+
+
   </style>
 
+    <div id="container">
 
-    <polymer-ui-toolbar>
-        <a href="/"><polymer-ui-icon-button icon="menu" href="/"></polymer-ui-icon-button></a>
-        <polymer-ui-field>
-            <polymer-ui-icon icon="search"></polymer-ui-icon>
-            <input placeholder="Search" value="{{search}}" update-on="input"/>
-        </polymer-ui-field>
-        <polymer-ui-icon-button id="account" icon="account"></polymer-ui-icon-button>
-    </polymer-ui-toolbar>
-    <polymer-ui-dropdown id="dropdown">
-        <polymer-ui-menu-item icon="settings">Settings</polymer-ui-menu-item>
-        <polymer-ui-menu-item icon="close">Log out</polymer-ui-menu-item>
-    </polymer-ui-dropdown>
-    <div id="main">
-        <content></content>
-        <polymer-ui-sidebar selected="0" id="filters" label="Filter" class="column"  multi="true">
-            <template if="{{ data }}">
-                <template repeat="{{ item, index in data.filters }}">
-                    <polymer-ui-field class="align-center">
-                        <polymer-ui-toggle-button class="on" value="" offCaption="Hide" onCaption="Show"></polymer-ui-toggle-button>
-                        <label>{{item.desc}}</label>
-                    </polymer-ui-field>
-               </template>
-            </template>
-        </polymer-ui-sidebar>
+        <polymer-ui-toolbar>
+            <a href="/"><polymer-ui-icon-button icon="menu" href="/"></polymer-ui-icon-button></a>
+            <polymer-ui-field>
+                <polymer-ui-icon icon="search"></polymer-ui-icon>
+                <input placeholder="Search" value="{{search}}" update-on="input"/>
+            </polymer-ui-field>
+            <polymer-ui-icon-button id="account" icon="account"></polymer-ui-icon-button>
+        </polymer-ui-toolbar>
+
+        <polymer-ui-dropdown id="dropdown">
+            <polymer-ui-menu-item icon="settings">Settings</polymer-ui-menu-item>
+            <polymer-ui-menu-item icon="close">Log out</polymer-ui-menu-item>
+        </polymer-ui-dropdown>
+
+        <div id="main">
+            <content></content>
+
+            <polymer-ui-sidebar selected="0" id="filters" label="Filter" class="column"  multi="true">
+                <template if="{{ data }}">
+                    <template repeat="{{ item, index in data.filters }}">
+                        <polymer-ui-field class="align-center">
+                            <polymer-ui-toggle-button class="on" value="" offCaption="Hide" onCaption="Show"></polymer-ui-toggle-button>
+                            <label>{{item.desc}}</label>
+                        </polymer-ui-field>
+                   </template>
+                </template>
+            </polymer-ui-sidebar>
+
+        </div>
     </div>
+
 </template>
 <script>
     Polymer('pj-dashboard', {
