Added  missing files to the visualstudio soluution/projects
Added images to menu

--- a/Apps/SuperCRM/Client/menu.html
+++ b/Apps/SuperCRM/Client/menu.html
@@ -1,5 +1,21 @@
 <template bind="{{SuperCRM}}">
-  <li><a href="/launcher/workspace/super-crm/contacts/add">Add contact</a></li>
-  <li><a href="/launcher/workspace/super-crm/companies/add">Add company</a></li>
-  <li><a href="/launcher/workspace/super-crm/delete-all-data">Delete all data</a></li>
+
+    <li>
+        <a href="/launcher/workspace/super-crm/companies/add">
+            <div title="Code: 0xe802" class="the-icons span3"><i class="icon-industrial-building"></i> <span class="i-name">Add company</span></div>					
+        </a>
+    </li>
+
+    <li>
+        <a href="/launcher/workspace/super-crm/contacts/add">
+            <div title="Code: 0xe801" class="the-icons span3"><i class="icon-adult"></i> <span class="i-name">Add person</span></div>	
+        </a>
+    </li>
+
+    <li>
+        <a href="/launcher/workspace/super-crm/delete-all-data">
+            <div title="Code: 0xe803" class="the-icons span3"><i class="icon-trash"></i> <span class="i-name">Delete all data</span></div>
+        </a>
+    </li>
+
 </template>
