Added dropdown arrow
Quick styling of the some app headers

--- a/Apps/Map/Client/dashboard.html
+++ b/Apps/Map/Client/dashboard.html
@@ -1,3 +1,7 @@
+
+<link rel="stylesheet" href="/css/map.css">
+
+
 <!-- Importing Web Component's Polyfill -->
 <!-- 
 <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/platform.js"></script>
@@ -5,10 +9,10 @@
 -->
 <!-- Importing Custom Element -->
 <template bind="{{Map}}">
-<div>
+<div class="map">
 	<link rel="import" href="/vendor/static-openstreetmap/src/static-openstreetmap.html">
 
-	<h4>Map</h4>
+	<h1>Map</h1>
 	<static-openstreetmap lat="{{ Longitude$ }}" lng="{{ Latitude$ }}" width="64" height="64" zoom="{{ Zoom$ }}"></static-openstreetmap>
 </div>
 </template>
