--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -46,13 +46,13 @@
       </div>
       <template bind="{{ results }}">
         <!-- FIXME: hardcoded priority -->
-        <pj-sortable-tiles class="workspace launcher" disabled  cellWidth="128" cellHeight="128" priorities='[{"gap":{"left":8,"top":8},"width":1,"height":1,"priority":0.3},{"gap":{"left":8,"top":8},"width":2,"height":1,"priority":0.9},{"gap":{"left":8,"top":8},"width":2,"height":1,"priority":0.8},{"gap":{"left":8,"top":8},"width":1,"height":1,"priority":0.1}]'>
+        <pj-sortable-tiles class="workspace launcher" id="pj-sortable-tile:{{Html}}" disabled  cellWidth="128" cellHeight="128">
           <template is="imported-template" content="{{ Html }}"></template>   
         </pj-sortable-tiles>
       </template>
         <template repeat="{{ workspaces }}">
         <warpech-display-route match-path="^\/launcher\/workspace\/{{appName}}\/" display-selector=".workspace.{{appName}}"></warpech-display-route>
-        <pj-sortable-tiles class="workspace {{appName}}" disabled>
+        <pj-sortable-tiles class="workspace {{appName}}" id="pj-sortable-tile:{{master.Html}}" disabled>
             <template bind="{{ master }}">
                 <template is="imported-template" content="{{ Html }}"></template>  
             </template> 
