Added cc-element-queries to Skyper app
Added  map.css and skyper.css

--- a/Apps/Skyper/Client/skyper-dashboard.html
+++ b/Apps/Skyper/Client/skyper-dashboard.html
@@ -1,16 +1,17 @@
-<style>
-    .Skyper {
-        background-color: #0094ff;
-        color: #fff;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    .Skyper a {
-        color: #fff;
-    }
-</style>
+<link rel="stylesheet" href="/css/skyper.css">
+
+<script src="vendor/css-element-queries/src/ElementQueries.js"></script>
+<script src="vendor/css-element-queries/src/ResizeSensor.js"></script>
+
 <template bind="{{Skyper}}">
     <section class="Skyper">
-            <a href="/launcher/workspace/skyper/friends-list"><img src="/vendor/skype-uri/callbutton_trans_16px.png">
-            <br>Show all contacts</a>
+
+		<div class="SkyperDashboard">
+	        <a href="/launcher/workspace/skyper/friends-list">
+                <div>Show all contacts</div>
+                <img src="/vendor/skype-uri/Skypeicon_trans_24px.png">
+	        </a>
+        </div>
+
     </section>
 </template>
