--- a/Apps/Skyper/Client/skyper.html
+++ b/Apps/Skyper/Client/skyper.html
@@ -1,6 +1,14 @@
-﻿<template bind="{{Skyper}}">
-    <h1>Skyper</h1>
-    <template bind="{{MyOnlyFriend}}">
-        <template is="imported-template" content="{{Html}}"></template>
-    </template>
+﻿<link rel="stylesheet" href="/css/skyper.css">
+<script src="vendor/css-element-queries/src/ElementQueries.js"></script>
+<script src="vendor/css-element-queries/src/ResizeSensor.js"></script>
+
+<template bind="{{Skyper}}">
+
+    <div class="Skyper">
+        <h1>Skyper</h1>
+        <template bind="{{MyOnlyFriend}}">
+            <template is="imported-template" content="{{Html}}"></template>
+        </template>
+    </div>
+
 </template>
