--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -98,7 +98,7 @@
     <div id="container">
 
         <polymer-ui-toolbar>
-            <a href="/"><polymer-ui-icon-button icon="menu" href="/"></polymer-ui-icon-button></a>
+            <a href="/"><polymer-ui-icon-button icon="menu"></polymer-ui-icon-button></a>
             <polymer-ui-field>
                 <polymer-ui-icon icon="search"></polymer-ui-icon>
                 <input placeholder="Search" value="{{search}}" update-on="input"/>
