shorten button text so that it fits in 128x32 px

--- a/Apps/Skyper/Client/skyper-dashboard.html
+++ b/Apps/Skyper/Client/skyper-dashboard.html
@@ -8,7 +8,7 @@
 
 		<div class="SkyperDashboard">
 	        <a href="/launcher/workspace/skyper/friends-list">
-                <div>Show all contacts</div>
+                <div>All contacts</div>
                 <img src="/vendor/skype-uri/Skypeicon_trans_24px.png">
 	        </a>
         </div>
