Skyper button didn't save

--- a/Apps/Skyper/Client/skyper-user.html
+++ b/Apps/Skyper/Client/skyper-user.html
@@ -32,7 +32,7 @@
                     Skype username
                     <input value="{{ Contact.SkypeId$ }}">
                 </label>
-                <button onclick="getModel(this).Editing$ = false">OK</button>
+                <button onclick="getModel(this).Save$ = null">OK</button><!--text input will remain on screen until https://github.com/Starcounter/Starcounter/issues/1871 is fixed-->
             </div>
         </template>
 
