--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
 
+    <link rel="stylesheet" href="/css/toolbar.css">
     <link rel="stylesheet" href="/css/menu.css">
 
     <link rel="stylesheet" href="/css/fontello.css">
