--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -97,9 +97,9 @@
 
     <div id="container">
 
-        <polymer-ui-toolbar>
+        <polymer-ui-toolbar   theme="launcher-theme" class="launcher-theme" defaulttheme="polymer-ui-light-theme">
             <a href="/"><polymer-ui-icon-button icon="menu"></polymer-ui-icon-button></a>
-            <polymer-ui-field>
+            <polymer-ui-field class="launcher-theme">
                 <polymer-ui-icon icon="search"></polymer-ui-icon>
                 <input placeholder="Search" value="{{search}}" update-on="input"/>
             </polymer-ui-field>
