--- a/Apps/SuperCRM/Client/menu.html
+++ b/Apps/SuperCRM/Client/menu.html
@@ -1,3 +1,12 @@
+
+
+ <link rel="stylesheet" href="css/supercrmfont.css">
+    <link rel="stylesheet" href="css/animation.css">
+    <!--if IE 7
+    link(rel='stylesheet', href='css/supercrmfont-ie7.css')
+    
+    -->
+
 <template bind="{{SuperCRM}}">
 
     <li>
