--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -19,11 +19,14 @@
 
     <link rel="stylesheet" href="/css/style.css">
 
-    <link rel="stylesheet" href="/css/toolbar.css">
-    <link rel="stylesheet" href="/css/menu.css">
+<!--    <link rel="stylesheet" href="/css/fontello.css">
+    <link rel="stylesheet" href="/css/animation.css">-->
 
-    <link rel="stylesheet" href="/css/fontello.css">
-    <link rel="stylesheet" href="/css/animation.css">
+    <link rel="stylesheet" href="/css/launcher-toolbar.css">
+    <link rel="stylesheet" href="/css/launcher-menu.css">
+    <link rel="stylesheet" href="/css/launcher-button.css">
+    <link rel="stylesheet" href="/css/launcher-labeledInput.css">
+    <link rel="stylesheet" href="/css/launcher-select.css">
 
     <script src="/vendor/css-element-queries/src/ElementQueries.js"></script>
     <script src="/vendor/css-element-queries/src/ResizeSensor.js"></script>
